src/test/deca/etapeB/invalid/print_one_bad_arg.deca
// Description:
//    Utilisation ud println
//
// Resultats:
//    Ligne 11 : pas assez d'argument
// 
// Historique:
//    cree le 01/01/2016

{
   print(2,3,4,true,7.2);
}
